--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
     "imagesloaded": "^5.0.0",
     "jquery": "^3.7.1",
     "jquery-ui-dist": "^1.13.3",
